--- a/Algo-Proj2/Makefile
+++ b/Algo-Proj2/Makefile
@@ -1,5 +1,5 @@
 all: proj2.c
-	gcc -Wall -o proj2 proj2.c
-
+	gcc -Wall proj2.c -fopenmp -o proj2
+	gcc -Wall proj2parallel.c -fopenmp -o proj2parallel
 clean:
 	$(RM) proj2
